--- a/LESSON-250316/quiz/backend/package.json
+++ b/LESSON-250316/quiz/backend/package.json
@@ -2,9 +2,13 @@
   "name": "backend",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
